un viaje de cosas

--- a/cotizador_acerta/templates/administrador/list_importacion.html
+++ b/cotizador_acerta/templates/administrador/list_importacion.html
@@ -34,6 +34,9 @@
               </table>
             </div><!-- /.box-body -->
           </div><!-- /.box -->
+          <div class="text-center">
+            <a href="{% url 'dashboard' %}" class="btn btn-primary">Atrás</a>
+          </div>
         </div>
         <div class="col-md-3 col-sm-hidden col-xs-hidden"></div>
     </div>
