--- a/cotizador_acerta/templates/register.html
+++ b/cotizador_acerta/templates/register.html
@@ -76,16 +76,16 @@
                     <form action="" method="post" role="form" class="form-horizontal">
                         {% csrf_token %}
 
-                        {% bootstrap_field form.first_name layout='inline' %}
-                        {% bootstrap_field form.last_name layout='inline' %}
-                        {% bootstrap_field form.username show_help=False layout='inline' %}
-                        {% bootstrap_field form.email layout='inline' %}
-                        {% bootstrap_field form.password layout='inline' %}
-                        {% bootstrap_field form.password2 layout='inline' %}
+                        {% bootstrap_field form.first_name show_label=False %}
+                        {% bootstrap_field form.last_name show_label=False %}
+                        {% bootstrap_field form.email show_label=False %}
+                        {% bootstrap_field form.password show_label=False %}
+                        {% bootstrap_field form.password2 show_label=False %}
+                        {% bootstrap_field form.username show_help=False show_label=False %}
 
                         {% buttons %}
                             <div class="col-sm-4 col-md-12 text-center">
-                                <button type="submit" class="btn btn-lg calculate">
+                                <button id="id_submit" type="submit" class="btn btn-lg calculate">
                                     Registrar
                                 </button>
                             </div>
@@ -97,5 +97,13 @@
     </div>
 </div>
 {% endblock content %}
+{% block custom_script %}
+<script type="text/javascript">
+    $(document).on("click", "#id_submit", function(e){
+        console.log("entrando");
+        $("#id_username").val($("#id_email").val());
+    });
+</script>
+{% endblock custom_script %}
 
 
