--- a/cotizador_acerta/templates/registro_corredor.html
+++ b/cotizador_acerta/templates/registro_corredor.html
@@ -73,22 +73,22 @@
             <div class="col-xs-10 col-sm-8 col-md-4">
                 {% bootstrap_form_errors form %}
                 <div class="login-box-body">
-                    <form action="" method="post" role="form" class="form-horizontal">
+                    <form id="registro-form" action="" method="post" role="form" class="form-horizontal">
                         {% csrf_token %}
 
-                        {% bootstrap_field form.first_name layout='inline' %}
-                        {% bootstrap_field form.last_name layout='inline' %}
-                        {% bootstrap_field form.ruc layout='inline' %}
-                        {% bootstrap_field form.licencia layout='inline' %}
-                        {% bootstrap_field form.username show_help=False layout='inline' %}
-                        {% bootstrap_field form.email layout='inline' %}
-                        {% bootstrap_field form.password layout='inline' %}
-                        {% bootstrap_field form.password2 layout='inline' %}
+                        {% bootstrap_field form.first_name show_label=False %}
+                        {% bootstrap_field form.last_name show_label=False %}
+                        {% bootstrap_field form.ruc show_label=False %}
+                        {% bootstrap_field form.licencia show_label=False %}
+                        {% bootstrap_field form.email show_label=False %}
+                        {% bootstrap_field form.password show_label=False %}
+                        {% bootstrap_field form.password2 show_label=False %}
+                        {% bootstrap_field form.username show_label=False %}
 
 
                         {% buttons %}
                             <div class="col-sm-4 col-md-12 text-center">
-                                <button type="submit" class="btn btn-lg calculate">
+                                <button id="id_submit" type="submit" class="btn btn-lg calculate">
                                     Registrar
                                 </button>
                             </div>
@@ -101,4 +101,11 @@
 </div>
 {% endblock content %}
 
-
+{% block custom_script %}
+<script type="text/javascript">
+    $(document).on("click", "#id_submit", function(e){
+        console.log("entrando");
+        $("#id_username").val($("#id_email").val());
+    });
+</script>
+{% endblock custom_script %}
