--- a/cotizador_acerta/templates/administrador/list_endoso.html
+++ b/cotizador_acerta/templates/administrador/list_endoso.html
@@ -2,7 +2,7 @@
 
 {% block titulo %}
     <h1>
-        Editar Factor: <strong>Estado Civil</strong>
+        Editar Factor: <strong>Endosos Acerta</strong>
     </h1>
 {% endblock titulo %}
 
