--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -167,9 +167,9 @@
                             {% bootstrap_field form.valor layout='horizontal' show_label=False field_class='form-field-value' %}
                             {% bootstrap_field form.valor_text layout='horizontal' show_label=False field_class='form-field' %}
                             <!-- {% bootstrap_field form.endoso layout='horizontal' show_label=False field_class='form-field' %} -->
-                            <div class="form-group" style="margin-top: -3%">
+                            <div class="form-group" style="margin-top: -6%">
                                 <div class="form-field input-group col-xs-12">
-                                    <select class="form-control" id="id_endoso" name="endoso" required="required" title="">
+                                    <select class="form-control" id="id_endoso" name="endoso" required="required" title="Endoso">
                                         <option value="" selected=selected disabled>Endoso</option>
                                         <option value="Basico">Básico</option>
                                         <option value="Especial">Acerta Especial</option>
