--- a/cotizador_acerta/templates/register.html
+++ b/cotizador_acerta/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "administrador/base_admin.html" %}
 {# Load the tag library #}
 {% load bootstrap3 %}
 
@@ -60,42 +60,48 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-xs-12" style="padding-top: 10%">
+    <div class="col-xs-12">
         <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4"></div>
-                <div class="col-md-4 text-center">
-                    <h1 id="titulo-login" class="text-center"><strong>REGISTRO DE VENDEDORES</strong></h1>
-                </div>
-                <div class="col-md-4"></div>
-            </div>
-            <div class="col-xs-1 col-sm-2 col-md-4"></div>
-            <div class="col-xs-10 col-sm-8 col-md-4">
-                {% bootstrap_form_errors form %}
-                <div class="login-box-body">
-                    <form action="" method="post" role="form" class="form-horizontal">
-                        {% csrf_token %}
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8">
+                <div class="box box-danger">
+                    <div class="box-header with-border">
+                        <h1 id="titulo-login" class="text-center"><strong>REGISTRO DE VENDEDORES</strong></h1>
+                    </div>
+                    {% bootstrap_form_errors form %}
+                    <div class="box-body">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10">
+                            <form action="" method="post" role="form" class="form-horizontal">
+                                {% csrf_token %}
 
-                        {% bootstrap_field form.first_name show_label=False %}
-                        {% bootstrap_field form.last_name show_label=False %}
-                        {% bootstrap_field form.email show_label=False %}
-                        {% bootstrap_field form.password show_label=False %}
-                        {% bootstrap_field form.password2 show_label=False %}
-                        {% bootstrap_field form.username show_help=False show_label=False %}
+                                {% bootstrap_field form.first_name show_label=False %}
+                                {% bootstrap_field form.last_name show_label=False %}
+                                {% bootstrap_field form.email show_label=False %}
+                                {% bootstrap_field form.password show_label=False %}
+                                {% bootstrap_field form.password2 show_label=False %}
+                                {% bootstrap_field form.username show_label=False %}
 
-                        {% buttons %}
-                            <div class="col-sm-4 col-md-12 text-center">
-                                <button id="id_submit" type="submit" class="btn btn-lg calculate">
-                                    Registrar
-                                </button>
-                            </div>
-                        {% endbuttons %}
-                    </form>
-                </div><!-- /.login-box-body -->
+                                {% buttons %}
+                                    <div class="col-md-3"></div>
+                                    <div class="col-sm-4 col-md-6 text-center">
+                                        <button id="id_submit" type="submit" class="btn btn-lg calculate">
+                                            Registrar
+                                        </button>
+                                    </div>
+                                    <div class="col-md-3"></div>
+                                {% endbuttons %}
+                            </form>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
             </div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
         </div>
     </div>
 </div>
+
 {% endblock content %}
 {% block custom_script %}
 <script type="text/javascript">
