--- a/cotizador_acerta/templates/reportes/cotizador_specific_detail.html
+++ b/cotizador_acerta/templates/reportes/cotizador_specific_detail.html
@@ -21,6 +21,18 @@
         border-right: 2px solid #F3F3F3 !important;
         border-bottom: 2px solid #F3F3F3 !important;
     }
+    .alert-dismissable {
+      background-color: #dd4b39 !important;
+    }
+    .alert-danger {
+        background-image: -webkit-gradient(linear, left 0%, left 100%, from(#dd4b39), to(#dd4b39));
+        background-image: -webkit-linear-gradient(top, #dd4b39, 0%, #dd4b39, 100%);
+        background-image: -moz-linear-gradient(top, #dd4b39 0%, #dd4b39 100%);
+        background-image: linear-gradient(to bottom, #dd4b39 0%, #dd4b39 100%);
+        background-repeat: repeat-x;
+        border-color: #dd4b39;
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dd4b39', endColorstr='#dd4b39', GradientType=0);
+    }
 </style>
 {% endblock extracss %}
 
@@ -29,13 +41,17 @@
 {% endblock extrahead %}
 
 {% block content %}
-{% bootstrap_form_errors form %}
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-4">
+    {% bootstrap_form_errors form %}
+  </div>
+</div>
 <form method="post" role="form">
-            
+          {% csrf_token %}
             <div id="div_start_date"
                  class="form-group">
                 <label for="id_start_date">Start date:</label>
-                
+
         <div class="input-group date col-md-3" id="id_start_date_picker">
             <input class="form-control" id="id_start_date" name="start_date" type="text"/>
             <span class="input-group-addon">
@@ -47,14 +63,14 @@
                     <small></small>
                 </div>
                 <div class="help-block">
-                    
+
                 </div>
             </div>
-            
+
             <div id="div_end_date"
                  class="form-group">
                 <label for="id_end_date">End date:</label>
-                
+
         <div class="input-group date col-md-3" id="id_end_date_picker">
             <input class="form-control" id="id_end_date" name="end_date" type="text"/>
             <span class="input-group-addon">
@@ -66,12 +82,10 @@
                     <small></small>
                 </div>
                 <div class="help-block">
-                    
+
                 </div>
             </div>
-            
-            
-            <input type='hidden' name='csrfmiddlewaretoken' value='cYh7UOek7Bc1N6hasllE6C8GZVKthrGy' />
+
             <div class="form-group">
                 <input type="submit" value="Filtrar" class="btn btn-primary" />
             </div>
